# config

./: .Xdefaults  .ackrc  .aspell.conf  .bash_aliases  .bash_profile  .bash_utils  .bashrc  .bashrc-private  .emacs  .garglkrc  .gitconfig  .gitconfig-arweave  .gitconfig-upvest  .gitignore_global  .muttrc  .ocamlinit  .offlineimap.py  .offlineimaprc  .profile  .tmux.conf  .vimrc  .xsession  INSTALL.md  Makefile  README.md  Variables.txt  generate-makefile.sh  grub.cfg  install.sh  mirrors.sh  solarized.dark  solarized.light  sudoers  vimium  vimium.json
.config/: displays.json  displayswitcheroo.bedroom.json  displayswitcheroo.desktop.json  displayswitcheroo.json  displayswitcheroo.thinkpad-t460s.json
.gnupg/: gpg-agent.conf
.mplayer/: ass.styles  config  input.conf
.mutt/: arweave.org.rc  gustav.behm@gmail.com.rc  mailcap  rootmos.io.rc  upvest.co.rc
.newsboat/: config
.tmux.d/: hck.sh  time.sh  tmp.sh  twitch.sh
.vim/: filetype.vim  ycm_global_conf.py
.xmonad/: .gitignore  build  conky.ar0.config  conky.ar1.config  conky.lillakoo.config  conky.svartakoo.config  conky.thinkpad-t460s.config  conky.x1.config  conky_dzen  conky_dzen_desktop  my-xmonad.cabal  stack.yaml  xmonad-desktop.hs  xmonad-laptop.hs  xmonad-work.hs  xmonad.hs
.xmonad/src/: Main.hs  Utils.hs
Accounts/: TC - Swedish - My.SC2Hotkeys  Variables.txt
defaults/: grub
etc/: dnsmasq.conf  resolv.conf
games/: aspect-ratio  garglk.ini  rimworld
git-hooks/: pre-commit
iptables/: accept-tcp  firewall-with-docker.rules
pm/: 0000rtchibernate  0010-locker
sensitive/: sieve  umatrix.txt
(+104 files in other folders)
