name:                my-xmonad
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable xmonad
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Utils
  build-depends:       base
                     , directory
                     , xmonad
                     , xmonad-contrib
                     , containers
                     , X11
  default-language:    Haskell2010
