name: my-xmonad
version: 0.1.0.0
build-type: Simple
cabal-version: >= 1.10

executable xmonad
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: Utils
  build-depends:
      base >= 4.11.0.0
    , directory
    , xmonad >= 0.17.2 && < 1.18
    , xmonad-contrib >= 0.17.1 && < 1.18
    , containers
    , X11 >= 1.10.3 && < 1.11
    , hostname
    , filepath
  default-language: Haskell2010
